--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
     "no-mixed-operators": 0,
     "no-plusplus": 0,
     "no-continue": 0,
+    "no-unused-expressions": 0,
     "space-infix-ops": 0,
     "space-before-function-paren": ["error", {
       "anonymous": "never",
