--- a/package.json
+++ b/package.json
@@ -29,8 +29,24 @@
     "eslint-plugin-import": "^2.19.1",
     "mocha": "^6.2.2",
     "nyc": "^14.1.1",
+    "proxyquire": "^2.1.3",
     "sinon": "^7.5.0",
     "sinon-chai": "^3.3.0",
     "supertest": "^4.0.2"
+  },
+  "nyc": {
+    "check-coverage": true,
+    "lines": 95,
+    "statements": 95,
+    "branches": 95,
+    "exclude": [
+      "test/**",
+      "node_modules/**"
+    ],
+    "reporter": [
+      "text",
+      "json",
+      "lcov"
+    ]
   }
 }
