--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "npm run lint && NODE_ENV=test nyc mocha",
     "dev": "NODE_ENV=dev node app.js",
+    "start": "node app.js",
     "lint": "eslint *.js test/"
   },
   "author": "Lucjan Wiśnicz",
